给ModuleInit增加优先级配置